fixes minor layout issues
git-svn-id: https://server.mycore.de/svn/maven/mir/trunk@31342 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/mir-flatmir-layout/src/main/less/flatmir/mir_results.less
+++ b/mir-flatmir-layout/src/main/less/flatmir/mir_results.less
@@ -128,7 +128,8 @@
           box-shadow: 1px 1px 4px #999;
         }
       }
-      .hit_icon {
+      .hit_icon,
+      .resultListPreviewImage {
         height: 103px;
         width: 73px;
         border: 1px solid @light_neutral;
@@ -158,10 +159,6 @@
         font-size: 20px;
         margin: 15px 0 5px 0;
         border-left: 0px solid @light_neutral;
-        text-decoration: none;
-        a:hover {
-          text-decoration: none;
-        }
       }
       .hit_author {
         font-size: 16px;
